Single File, App Settings, App Secrets

--- a/src/MICMediaManager/Views/Home/Index.cshtml
+++ b/src/MICMediaManager/Views/Home/Index.cshtml
@@ -2,13 +2,15 @@
     ViewData["Title"] = "Home Page";
 }
 
+Storage Account Name --> @ViewBag.StorageAccountName <br/>
+Storage Account Key --> @ViewBag.StorageAccountKey <br />
 <div class="row">
     <form method="post" enctype="multipart/form-data"
           asp-controller="UploadFiles" asp-action="Index">
         <div class="form-group">
             <div class="col-md-10">
                 <p>Upload one or more files using this form:</p>
-                <input type="file" name="files" />
+                <input type="file" name="postedFile" />
             </div>
         </div>
         <div class="form-group">
