--- a/src/MICMediaManager/Views/DisplayItems/Create.cshtml
+++ b/src/MICMediaManager/Views/DisplayItems/Create.cshtml
@@ -12,24 +12,17 @@
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div class="form-group">
+            <div class="col-md-10">
+                <p>Upload one file using this form:</p>
+                <input type="file" name="MediaFile" />
+            </div>
+        </div>
+        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <div class="checkbox">
                     <input asp-for="IsActive" />
-                    <label asp-for="IsActive"></label>
+                    <label>Is Active?</label>
                 </div>
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="OrderIndex" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="OrderIndex" class="form-control" />
-                <span asp-validation-for="OrderIndex" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-10">
-                <p>Upload one or more files using this form:</p>
-                <input type="file" name="MediaFile" />
             </div>
         </div>
         <div class="form-group">
