--- a/src/MICMediaManager/Views/Home/Index.cshtml
+++ b/src/MICMediaManager/Views/Home/Index.cshtml
@@ -1,23 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-
-Storage Account Name --> @ViewBag.StorageAccountName <br/>
-Storage Account Key --> @ViewBag.StorageAccountKey <br />
+<div style="height: 20px;"></div>
 <div class="row">
-    <form method="post" enctype="multipart/form-data"
-          asp-controller="UploadFiles" asp-action="Index">
-        <div class="form-group">
-            <div class="col-md-10">
-                <p>Upload one or more files using this form:</p>
-                <input type="file" name="postedFile" />
-            </div>
-        </div>
-        <div class="form-group">
-            <div class="col-md-10">
-                <input type="submit" value="Upload" />
-            </div>
-        </div>
-    </form>
+    <div align="center">
+        <img src="~/images/mic-banner.jpg" class="img-responsive" />
+    </div>
+    <!-- TODO: HOME PAGE-->
 </div>
 
