--- a/src/MICMediaManager/Views/DisplayItems/Edit.cshtml
+++ b/src/MICMediaManager/Views/DisplayItems/Edit.cshtml
@@ -6,33 +6,14 @@
 
 <h2>Edit</h2>
 
-<form asp-action="Edit">
+<form asp-action="Edit" enctype="multipart/form-data" method="post">
     <div class="form-horizontal">
         <h4>DisplayItem</h4>
         <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <input type="hidden" asp-for="Id" />
-        <div class="form-group">
-            <label asp-for="DateCreated" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="DateCreated" class="form-control" />
-                <span asp-validation-for="DateCreated" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="DateModified" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="DateModified" class="form-control" />
-                <span asp-validation-for="DateModified" class="text-danger" />
-            </div>
-        </div>
-        <div class="form-group">
-            <label asp-for="ImageUri" class="col-md-2 control-label"></label>
-            <div class="col-md-10">
-                <input asp-for="ImageUri" class="form-control" />
-                <span asp-validation-for="ImageUri" class="text-danger" />
-            </div>
-        </div>
+
+        <img src="@Model.ImageUri" style="width: 400px;" />
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <div class="checkbox">
@@ -42,7 +23,13 @@
             </div>
         </div>
         <div class="form-group">
-            <label asp-for="OrderIndex" class="col-md-2 control-label"></label>
+            <div class="col-md-10">
+                <p>To edit the image, upload a new file here:</p>
+                <input type="file" name="MediaFile" />
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-md-2 control-label">Order Index</label>
             <div class="col-md-10">
                 <input asp-for="OrderIndex" class="form-control" />
                 <span asp-validation-for="OrderIndex" class="text-danger" />
