--- a/src/MICMediaManager/Views/DisplayItems/Delete.cshtml
+++ b/src/MICMediaManager/Views/DisplayItems/Delete.cshtml
@@ -8,44 +8,14 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>DisplayItem</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.DateCreated)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DateCreated)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.DateModified)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.DateModified)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ImageUri)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ImageUri)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.IsActive)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.IsActive)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.OrderIndex)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.OrderIndex)
-        </dd>
+       <img src="@Model.ImageUri" class="img-responsive"/>
     </dl>
     
     <form asp-action="Delete">
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             <a asp-action="Index">Back to List</a>
         </div>
     </form>
