--- a/src/MICMediaManager/Views/Account/Login.cshtml
+++ b/src/MICMediaManager/Views/Account/Login.cshtml
@@ -45,9 +45,9 @@
                         <button type="submit" class="btn btn-default">Log in</button>
                     </div>
                 </div>
-                <p>
+                @*<p>
                     <a asp-action="Register" asp-route-returnurl="@ViewData["ReturnUrl"]">Register as a new user?</a>
-                </p>
+                </p>*@
                 <p>
                     <a asp-action="ForgotPassword">Forgot your password?</a>
                 </p>
@@ -55,7 +55,7 @@
         </section>
     </div>
     <div class="col-md-4">
-        <section>
+        @*<section>
             <h4>Use another service to log in.</h4>
             <hr />
             @{
@@ -83,7 +83,7 @@
                     </form>
                 }
             }
-        </section>
+        </section>*@
     </div>
 </div>
 
