--- a/MICMediaManager/src/MICMediaManager/Views/DisplayItems/Index.cshtml
+++ b/MICMediaManager/src/MICMediaManager/Views/DisplayItems/Index.cshtml
@@ -13,7 +13,7 @@
     <thead>
         <tr>
             <th style="width: 400px;">
-                @Html.DisplayNameFor(model => model.ImageUri)
+                Slide Image
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.IsActive)
