--- a/MICMediaManager/src/MICMediaManager/Views/DisplayItems/Index.cshtml
+++ b/MICMediaManager/src/MICMediaManager/Views/DisplayItems/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>All Slides</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -16,10 +16,10 @@
                 Slide Image
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IsActive)
+                Is Active?
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.OrderIndex)
+                Display Order
             </th>
             <th></th>
         </tr>
